fix footer z-index

--- a/src/components/specialOffer/AdvertiseSwipe.css
+++ b/src/components/specialOffer/AdvertiseSwipe.css
@@ -4,4 +4,5 @@
   margin-right: auto;
   border-radius: 20px;
   margin-top: 62px;
+  margin-bottom: 50px;
 }
